--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,10 +9,11 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:columnCount="3"
-        android:rowCount="2">
+        android:columnCount="2"
+        android:rowCount="3">
 
         <Button
+            android:id="@+id/btnArea"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Area of circle"
@@ -20,6 +21,7 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:id="@+id/btnPalindrome"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Palindrome"
@@ -27,6 +29,7 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:id="@+id/btnSI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Simple Interest"
@@ -34,6 +37,7 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:id="@+id/btnArmstrong"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Armstrong"
@@ -41,6 +45,7 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:id="@+id/btnAutomorphic"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Automorphic"
@@ -48,6 +53,7 @@
             android:layout_columnWeight="1" />
 
         <Button
+            android:id="@+id/btnSwap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Number Swap"
@@ -55,5 +61,12 @@
             android:layout_columnWeight="1" />
 
     </GridLayout>
+
+    <LinearLayout
+        android:id="@+id/displayArea"
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
 </LinearLayout>
