validation in Swaping Numbers.

--- a/app/src/main/res/layout/fragment_swap.xml
+++ b/app/src/main/res/layout/fragment_swap.xml
@@ -10,6 +10,7 @@
         android:id="@+id/etFirstNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:textSize="20sp"
         android:hint="Enter First Number" />
 
@@ -17,6 +18,7 @@
         android:id="@+id/etSecondNum"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:textSize="20sp"
         android:hint="Enter Second Number" />
 
@@ -26,5 +28,13 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Swap" />
+
+    <TextView
+        android:id="@+id/tvSwap"
+        android:gravity="center"
+        android:layout_marginTop="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20sp" />
 
 </LinearLayout>
