validation in Simple Interest Calculation.

--- a/app/src/main/res/layout/fragment_simple_interest.xml
+++ b/app/src/main/res/layout/fragment_simple_interest.xml
@@ -10,6 +10,7 @@
     <EditText
         android:id="@+id/etAmount"
         android:hint="Enter the Amount"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp" />
@@ -17,6 +18,7 @@
     <EditText
         android:id="@+id/etTime"
         android:hint="Enter the Time"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp" />
@@ -24,6 +26,7 @@
     <EditText
         android:id="@+id/etRate"
         android:hint="Enter the Rate"
+        android:inputType="numberDecimal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp" />
@@ -34,5 +37,13 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Calculate" />
+
+    <TextView
+        android:id="@+id/tvSI"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="20sp" />
 
 </LinearLayout>
