--- a/app/src/main/res/layout/fragment_palindrome.xml
+++ b/app/src/main/res/layout/fragment_palindrome.xml
@@ -21,4 +21,12 @@
         android:text="Check"
         android:textSize="20sp" />
 
+    <TextView
+        android:id="@+id/tvPalindrome"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="20sp" />
+
 </LinearLayout>
