--- a/app/src/main/res/layout/fragment_automorphic.xml
+++ b/app/src/main/res/layout/fragment_automorphic.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:id="@+id/etNumberAu"
+        android:inputType="number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="20sp"
@@ -19,5 +20,13 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Check" />
+
+    <TextView
+        android:id="@+id/tvAutomorphic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="20sp" />
 
 </LinearLayout>
