validation in armstrong number checking.

--- a/app/src/main/res/layout/fragment_armstrong.xml
+++ b/app/src/main/res/layout/fragment_armstrong.xml
@@ -10,6 +10,7 @@
         android:id="@+id/etNumberAr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:textSize="20sp"
         android:hint="Enter a number" />
 
@@ -19,5 +20,13 @@
         android:layout_height="wrap_content"
         android:textSize="20sp"
         android:text="Check" />
+
+    <TextView
+        android:id="@+id/tvArmstrong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:textSize="20sp" />
 
 </LinearLayout>
