Small change in design of main activity.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,9 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:padding="5dp"
+        android:background="#002"
         android:columnCount="2"
         android:rowCount="3">
 
@@ -66,6 +69,7 @@
         android:id="@+id/displayArea"
         android:orientation="vertical"
         android:layout_width="match_parent"
+        android:padding="5dp"
         android:layout_height="0dp"
         android:layout_weight="1"/>
 
